--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,15 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: File Manager Buffet Codes
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
-
+  push:
+    branches:
+      - master
+      - develop
+      
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -23,16 +24,32 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Build c++ project
-      uses: nicledomaS/cmake_build_action@v1
+    - name: Build
+      uses: ashutoshvarma/action-cmake-build@v1
       with:
-        # Git submodule update
-        submodule_update: OFF # optional, default is OFF
-        # Cmake args (example -D<ARG1>=value;-D<ARG1>=value)
-        # cmake_args: # optional, default is 
-        # Run unit tests
-        run_tests: OFF # optional, default is OFF
-        # Cmake arg for turn build unit test (if need)
-        # unit_test_build: # optional, default is 
-        # For multi-configuration tools, choose configuration <Release or Debug>
-        config: Release # optional, default is Release
+        # Build directory where build files will be generated
+        build-dir: ${{ runner.workspace }}/build # default is ${{ runner.workspace }}/build
+        # CMake build type (Release, Debug, MinSizeRel, RelWithDebInfo)
+        build-type: Release # default is Release
+        # C Compiler for toolchain
+        # cc: # optional
+        # C++ Compiler for toolchain
+        # cxx: # optional
+        # CMake build target
+        # target: # optional
+        # Number of concurrent jobs for build and test
+        # parallel: # optional, default is 4
+        # Run CTest or not
+        # run-test: # optional, default is false
+        # Run 'cmake --install' or not
+        # install-build: # optional, default is false
+        # Update git submodules
+        # submodule-update: # optional, default is false
+        # Misc Options to pass to CMake while configuring project
+        # configure-options: # optional
+        # Misc Options to pass to CMake while building project using cmake --build
+        # build-options: # optional
+        # Misc Options to pass to CMake while installing project using cmake --install
+        # install-options: # optional
+        # Misc Options to pass to CTest
+        # ctest-options: # optional
