Adding own commands

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,34 +22,39 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Build
-      uses: ashutoshvarma/action-cmake-build@v1
-      with:
-        # Build directory where build files will be generated
-        build-dir: ${{ runner.workspace }}/build # default is ${{ runner.workspace }}/build
-        # CMake build type (Release, Debug, MinSizeRel, RelWithDebInfo)
-        build-type: Release # default is Release
-        # C Compiler for toolchain
-        # cc: # optional
-        # C++ Compiler for toolchain
-        # cxx: # optional
-        # CMake build target
-        # target: # optional
-        # Number of concurrent jobs for build and test
-        # parallel: # optional, default is 4
-        # Run CTest or not
-        # run-test: # optional, default is false
-        # Run 'cmake --install' or not
-        # install-build: # optional, default is false
-        # Update git submodules
-        # submodule-update: # optional, default is false
-        # Misc Options to pass to CMake while configuring project
-        # configure-options: # optional
-        # Misc Options to pass to CMake while building project using cmake --build
-        # build-options: # optional
-        # Misc Options to pass to CMake while installing project using cmake --install
-        # install-options: # optional
-        # Misc Options to pass to CTest
-        # ctest-options: # optional
+    
+    - name: cmake-build
+      run: mkdir build && cmake .. && make && cp *.a ../samples/
+    
+    - name: cmake-samples
+      run: cd samples && mkdir build && cmake .. && make && ./main
+#     # Runs a single command using the runners shell
+#     - name: Build
+#       uses: ashutoshvarma/action-cmake-build@v1
+#       with:
+#         # Build directory where build files will be generated
+#         build-dir: ${{ runner.workspace }}/build # default is ${{ runner.workspace }}/build
+#         # CMake build type (Release, Debug, MinSizeRel, RelWithDebInfo)
+#         build-type: Release # default is Release
+#         # C Compiler for toolchain
+#         # cc: # optional
+#         # C++ Compiler for toolchain
+#         # cxx: # optional
+#         # CMake build target
+#         # target: # optional
+#         # Number of concurrent jobs for build and test
+#         # parallel: # optional, default is 4
+#         # Run CTest or not
+#         # run-test: # optional, default is false
+#         # Run 'cmake --install' or not
+#         # install-build: # optional, default is false
+#         # Update git submodules
+#         # submodule-update: # optional, default is false
+#         # Misc Options to pass to CMake while configuring project
+#         # configure-options: # optional
+#         # Misc Options to pass to CMake while building project using cmake --build
+#         # build-options: # optional
+#         # Misc Options to pass to CMake while installing project using cmake --install
+#         # install-options: # optional
+#         # Misc Options to pass to CTest
+#         # ctest-options: # optional
