Fix CMakeLists for samples, testing on GitHub Actions now

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -7,8 +7,7 @@ enable_testing()
 # add_library(libcpp-file-manager)
 
 add_executable(main sample.cpp)
-set(LIBRARY_DIR /home/krshrimali/Documents/Projects/BuffetCodes/CPP-File-Manager/samples/)
-target_link_libraries(main ${LIBRARY_DIR}/libcpp-file-manager.a)
+target_link_libraries(main ${CMAKE_CURRENT_SOURCE_DIR}/libcpp-file-manager.a)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
