--- a/.github/workflows/build-filemanager.yml
+++ b/.github/workflows/build-filemanager.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: cmake-build
-        run: ls -i && pwd && mkdir build && cd build && cmake .. && make && cp *.a ../samples/
+        run: mkdir build && cd build && cmake .. && make && cp *.a ../samples/
 
       - name: cmake-samples
         run: cd samples && mkdir build && cd build && cmake .. && make && ./main
